# loess-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
benchmarks/: INTERPRETATION.md  compare_benchmark.py  compare_benchmark_skmisc.py  convert_criterion.py
benchmarks/R/: benchmark.R
benchmarks/loess-rs/: Cargo.toml
benchmarks/loess-rs/benches/: benchmark.rs
benchmarks/output/: r_benchmark.json  rust_benchmark.json  skmisc_benchmark.json
benchmarks/skmisc/: benchmark.py
examples/: batch_smoothing.rs  online_smoothing.rs  streaming_smoothing.rs
output/: r_benchmark.json
src/: api.rs  lib.rs
src/adapters/: batch.rs  mod.rs  online.rs  streaming.rs
src/algorithms/: interpolation.rs  mod.rs  regression.rs  robustness.rs
src/algorithms/regression/: context.rs  generic.rs  mod.rs  types.rs
src/engine/: executor.rs  mod.rs  output.rs  validator.rs  workspace.rs
src/evaluation/: cv.rs  diagnostics.rs  intervals.rs
src/math/: boundary.rs  distance.rs  hat_matrix.rs  kernel.rs  linalg.rs  mad.rs  mod.rs  neighborhood.rs  scaling.rs
src/primitives/: backend.rs  buffer.rs  errors.rs  mod.rs  partition.rs  sorting.rs  window.rs
tests/: adapters_batch_tests.rs  adapters_online_tests.rs  adapters_streaming_tests.rs  algorithms_interpolation_tests.rs  algorithms_regression_specialized_tests.rs  algorithms_regression_tests.rs  algorithms_regression_types_tests.rs  algorithms_robustness_tests.rs  api_tests.rs  engine_executor_tests.rs  engine_output_tests.rs  engine_validator_tests.rs  evaluation_cv_tests.rs  evaluation_diagnostics_tests.rs  evaluation_intervals_tests.rs  integration_adapters_tests.rs  math_boundary_tests.rs  math_distance_tests.rs  math_kernel_tests.rs  math_mad_tests.rs  math_neighborhood_tests.rs  math_scaling_tests.rs  prelude_test.rs  primitives_errors_tests.rs  primitives_partition_tests.rs  primitives_sorting_tests.rs  primitives_window_tests.rs
validation/: INTERPRETATION.md  compare_validation.py  plot.py
validation/R/: validate.R
validation/loess-rs/: Cargo.toml
validation/loess-rs/src/: validate.rs  visual_validation.rs
validation/output/loess_rs/: 01_tiny_linear.json  02_small_quadratic.json  03_sine_standard.json  04_sine_robust.json  05_degree_0.json  06_large_scale.json  07_high_smoothness.json  08_low_smoothness.json  09_quadratic_robust.json  10_constant.json  11_step_func.json  12_end_effects_left.json  13_end_effects_right.json  14_sparse_data.json  15_dense_data.json  16_degree_2_sine.json  17_robust_degree_0.json  18_iter_2.json  19_interpolate_exact.json  20_zero_variance.json
validation/output/r/: 01_tiny_linear.json  02_small_quadratic.json  03_sine_standard.json  04_sine_robust.json  05_degree_0.json  06_large_scale.json  07_high_smoothness.json  08_low_smoothness.json  09_quadratic_robust.json  10_constant.json  11_step_func.json  12_end_effects_left.json  13_end_effects_right.json  14_sparse_data.json  15_dense_data.json  16_degree_2_sine.json  17_robust_degree_0.json  18_iter_2.json  19_interpolate_exact.json  20_zero_variance.json
validation/output/scikit/: 01_tiny_linear.json  02_small_quadratic.json  03_sine_standard.json  04_sine_robust.json  05_degree_0.json  06_large_scale.json  07_high_smoothness.json  08_low_smoothness.json  09_quadratic_robust.json  10_constant.json  11_step_func.json  14_sparse_data.json  (+8 more)
validation/skmisc/: validate.py
(+26 files in other folders)
