[package]
name = "loess-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

# Metadata
description = "LOESS (Locally Estimated Scatterplot Smoothing) implementation in Rust"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

# Links
repository = "https://github.com/thisisamirv/loess-rs"
documentation = "https://docs.rs/loess-rs"
homepage = "https://github.com/thisisamirv/loess-rs"

# Categories
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
include = [
    "src/**/*",
    "docs/**/*.svg",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
nalgebra = { version = "0.34", default-features = false, features = [
    "alloc",
    "libm",
] }

[dev-dependencies]
approx = "0.5"

[features]
default = ["std"]
std = ["num-traits/std", "nalgebra/std"]
dev = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
