[package]
name = "loess-rs-validation"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "validate"
path = "src/validate.rs"

[dependencies]
loess-rs = { git = "https://github.com/thisisamirv/loess-rs", branch = "develop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
